--- a/data/originalData/map_with_selected_months.html
+++ b/data/originalData/map_with_selected_months.html
@@ -24,14 +24,11 @@
         // Create the Leaflet map centered at the calculated center with an initial zoom level of 4
         var map = L.map('map').setView([centerLat, centerLon], 4);
 
-        // Set max bounds to restrict panning
-        map.setMaxBounds(boundingBox);
-        map.on('drag', function () {
-            map.panInsideBounds(boundingBox, { animate: false });
-        });
-
         // Add a tile layer (Esri World Imagery in this case)
         L.tileLayer("https://server.arcgisonline.com/ArcGIS/rest/services/World_Imagery/MapServer/tile/{z}/{y}/{x}", {'attribution': 'Map data &copy; <a href="https://www.esri.com/">Esri</a>', 'maxZoom': 18}).addTo(map)
+
+        // Add Zoom Control
+        L.control.zoom({ position: 'topright' }).addTo(map);
     
     </script>
 
